Update readme file

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
-.editor-content {
-  display: flex !important;
-  justify-content: center;
-  background-color: brown !important;
-  color:bisque;
-
-
+/* body.light-mode {
+  background-color: #fff;
+  color: #333;
+  transition: background-color 0.3s ease;
 }
+body.dark-mode {
+  background-color: #1a1919;
+  color: #999;
+} */
